[gd_scene load_steps=4 format=3 uid="uid://ddxvsddrrr8fq"]

[ext_resource type="PackedScene" uid="uid://dw074hxfnd5on" path="res://ship/ship.tscn" id="1_wjvp1"]
[ext_resource type="Script" uid="uid://bo5e2yv58votr" path="res://ship/autonomous_ship/autonomous_ship.gd" id="2_4maw4"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_wjvp1"]
radius = 30.0

[node name="AutonomousShip" instance=ExtResource("1_wjvp1")]
script = ExtResource("2_4maw4")

[node name="DetectionRange" type="Area3D" parent="." index="6"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionRange" index="0"]
shape = SubResource("CylinderShape3D_wjvp1")

[node name="ShieldDropTimer" type="Timer" parent="." index="7"]
one_shot = true

[connection signal="timeout" from="ShieldDropTimer" to="." method="_on_shield_drop_timer_timeout"]
